[package]
edition = "2018"
name = "hirofa-quickjs-sys"
description = "QuickJS, QuickJS-NG Javascript Engine FFI bindings"
version = "0.3.0"
readme = "README.md"
repository = "https://github.com/HiRoFa/quickjs-sys"
license = "MIT"
authors = ["Andries Hiemstra <andries@hiemstra-software.nl>"]
categories = ["external-ffi-bindings"]
keywords = ["quickjs"]

build = "build.rs"

[features]
default = ["bellard"]
bellard = []
quickjs-ng = []
#openwebf = []

[build-dependencies]
cc = { version = "1.0.66"}
copy_dir = { version = "0.1.2"}
