[package]
edition = "2024"
name = "hirofa-quickjs-sys"
description = "QuickJS, QuickJS-NG Javascript Engine FFI bindings"
version = "0.12.0"
readme = "README.md"
repository = "https://github.com/HiRoFa/quickjs-sys"
license = "MIT"
authors = ["Andries Hiemstra <andries@hiemstra-software.nl>"]
categories = ["external-ffi-bindings"]
keywords = ["quickjs"]

build = "build.rs"

[features]
#default = ["bellard"]
default = ["quickjs-ng"]
bellard = []
quickjs-ng = []

[build-dependencies]
cc = { version = "1.2" }
copy_dir = { version = "0.1" }
bindgen = "0.71"
